Fix alignment of homepage View all topics button

--- a/ckanext/nextgeoss/public/nextgeoss.css
+++ b/ckanext/nextgeoss/public/nextgeoss.css
@@ -292,7 +292,7 @@ h4.title a {
   margin-top: 15px;
   margin-bottom: 30px;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 15px;
 }
 .container .toolbar {
   margin-left: -15px;
